// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choice editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    undefined,
  ],
  "content": Object {
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "ObojoboDraft.Chunks.AbstractAssessment.Choice",
}
`;

exports[`Choice editor oboToSlate converts an OboNode to a Slate node with Feedback 1`] = `
Object {
  "children": Array [
    undefined,
    undefined,
    undefined,
  ],
  "content": Object {
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "ObojoboDraft.Chunks.AbstractAssessment.Choice",
}
`;

exports[`Choice editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [
    undefined,
    undefined,
    undefined,
  ],
  "content": Object {},
  "id": "mockKey",
  "type": undefined,
}
`;

exports[`Choice editor slateToObo converts a Slate node to an OboNode with type MC_CHOICE 1`] = `
Object {
  "children": Array [
    undefined,
    undefined,
    undefined,
  ],
  "content": Object {},
  "id": "mockKey",
  "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
}
`;
